<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="100dp"
    android:layout_marginHorizontal="48dp"
    tools:context=".SettingsFragment">

    <ImageView
        android:id="@+id/imageViewSettingsBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/settings_background_descr"
        android:scaleType="fitXY"
        android:src="@drawable/button_round_settings">
    </ImageView>

    <LinearLayout
        android:id="@+id/linearTitle"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="60dp"
        android:paddingHorizontal="50dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/ic_stroke_background"
            >
            <TextView
                android:id="@+id/textViewDifficulty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_difficulty_select"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="?attr/colorOnPrimary"
                />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radioGroupDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <RadioButton
                android:id="@+id/radioButtonEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_radio_easy"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryVariant"
                app:buttonTint="?attr/colorPrimaryVariant"
                >
            </RadioButton>
            <RadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_radio_medium"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryVariant"
                app:buttonTint="?attr/colorPrimaryVariant"
                >
            </RadioButton>
            <RadioButton
                android:id="@+id/radioButtonHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_radio_hard"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryVariant"
                app:buttonTint="?attr/colorPrimaryVariant"
                >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

</FrameLayout>