<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/linearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_stroke_background"
        android:gravity="center"
        >

        <ImageView
            android:visibility="invisible"
            android:background="@drawable/ic_settings_icon"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:layout_marginRight="25dp"
            >
        </ImageView>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textColor="?attr/colorOnPrimary"
            >
        </TextView>

        <ImageView
            android:contentDescription="@string/image_view_settings"
            android:id="@+id/imageViewSettings"
            android:background="@drawable/ic_settings_icon"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="25dp"
            >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearTitle"
        app:layout_constraintBottom_toTopOf="@id/scoreLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="end"
                android:paddingRight="6dp"
                >

            </TextView>
            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="end"
                android:text="counter386905"
                android:paddingRight="6dp"
                android:maxLength="14"
                >

            </TextView>

            <ImageView
                android:contentDescription="@string/image_view_edit_username"
                android:id="@+id/imageViewEditUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_icon"
                android:layout_gravity="center"
                android:padding="6dp"
                >

            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textViewScore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/score"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="16sp"

                android:paddingRight="6dp"
                >
            </TextView>

            <TextView
                android:id="@+id/textViewScorePlaceholder"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="15847"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="end"
                android:paddingRight="6dp"
                >
            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearTitle"
        app:layout_constraintBottom_toTopOf="@+id/taskLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="50dp"
        >

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/levelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_gravity="center"
                >

            </TextView>
            <TextView
                android:id="@+id/levelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="50sp"
                android:layout_gravity="center"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textViewAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answers"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_gravity="center"
                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >
                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/separator"
                        android:id="@+id/scoreNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:layout_gravity="center"
                        >
                    </TextView>
                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/separator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separator"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:paddingHorizontal="6dp"
                        android:layout_gravity="center"
                        >
                    </TextView>
                    <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/separator"
                        android:id="@+id/errorsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:layout_gravity="center"
                        >
                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_gravity="center"
                >
            </TextView>
            <TextView
                android:id="@+id/timeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="50sp"
                android:layout_gravity="center"
                >
            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLayout"
        app:layout_constraintBottom_toTopOf="@+id/gridView"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textViewStartButton"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start"
            android:textSize="36sp"
            android:textColor="?attr/colorOnPrimary"
            android:paddingHorizontal="16dp"
            >
        </TextView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLayout"
        app:layout_constraintBottom_toTopOf="@+id/gridView"
        android:layout_marginHorizontal="20dp"
        >
        <ImageView
            android:visibility="invisible"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_round_refresh_blank"
            android:layout_gravity="center"
            >

        </ImageView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/number"
            android:textColor="?attr/colorPrimaryVariant"
            android:textStyle="bold"
            android:textSize="70sp"
            android:gravity="end"
            >
        </TextView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/operation"
            android:textColor="?attr/colorPrimaryVariant"
            android:textStyle="bold"
            android:textSize="70sp"
            android:gravity="center"
            >
        </TextView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/number"
            android:textColor="?attr/colorPrimaryVariant"
            android:textStyle="bold"
            android:textSize="70sp"
            android:gravity="start"
            >
        </TextView>
        <ImageView
            android:contentDescription="@string/image_view_refresh"
            android:id="@+id/imageViewRefresh"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_round_refresh"
            android:layout_gravity="center"
            >

        </ImageView>

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/taskLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".TicTacToeFragment"
        tools:background="@color/light_blue"
        android:clipChildren="false"
        android:layout_marginBottom="50dp"
        >

    </GridLayout>

    <TextView
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/timeOutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_out"
        android:textSize="40sp"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        android:background="@drawable/ic_stroke_background"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/taskLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:padding="30dp"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/timerSecs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="30"
        android:textSize="42sp"
        android:textColor="@color/light_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>